# munch

./: .gitignore  CHANGELOG.md  PLAN.md  TODO.md  llms.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
munch/: __init__.py  python3_compat.py
tests/: conftest.py  test_munch.py  test_readme.py  test_yaml.py
